--- a/Design/.vscode/launch.json
+++ b/Design/.vscode/launch.json
@@ -2,18 +2,6 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": ".NET Core Launch (console)",
-            "type": "coreclr",
-            "request": "launch",
-            "preLaunchTask": "build",
-            "program": "${workspaceFolder}/ServiceTests/bin/Debug/net5.0/ServiceTests.dll",
-            "args": [],
-            "cwd": "${workspaceFolder}/ServiceTests",
-            "stopAtEntry": false,
-            "console": "internalConsole"
-        },
-
-        {
             // Use IntelliSense to find out which attributes exist for C# debugging
             // Use hover for the description of the existing attributes
             // For further information visit https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md
@@ -22,9 +10,9 @@
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceFolder}/Greetings/bin/Debug/net5.0/Greetings.dll",
+            "program": "${workspaceFolder}/PetApi/bin/Debug/net5.0/PetApi.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/Greetings",
+            "cwd": "${workspaceFolder}/PetApi",
             "stopAtEntry": false,
             // Enable launching a web browser when ASP.NET Core starts. For more information: https://aka.ms/VSCode-CS-LaunchJson-WebBrowser
             "serverReadyAction": {
