--- a/AsyncComunication/Consumer/KafkaConsumer/appsettings.json
+++ b/AsyncComunication/Consumer/KafkaConsumer/appsettings.json
@@ -1,10 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "AllowedHosts": "*"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
+    },
+    "AllowedHosts": "*",
+    "topic": "greetings",
+    "kafkaHost": "localhost:9092",
+    "clientId": "GreetingPRoducer"
 }
