--- a/kubernetes/Resources/department-deployment.yml
+++ b/kubernetes/Resources/department-deployment.yml
@@ -7,10 +7,12 @@ spec:
   selector:
     matchLabels:
       app: department
+      version: v1
   template:
     metadata:
       labels:
         app: department
+        version: v1
     spec:
       containers:
       - name: department
