--- a/kubernetes/Resources/organization-deployment-v2.yml
+++ b/kubernetes/Resources/organization-deployment-v2.yml
@@ -1,21 +1,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: employee
+  name: organization-v2
 spec:
   selector:
     matchLabels:
-      app: employee
-      version: v1
+      app: organization
+      version: v2
   template:
     metadata:
       labels:
-        app: employee
-        version: v1
+        app: organization
+        version: v2
     spec:
       containers:
-      - name: employee
-        image: containersoga/hremployee
+      - name: organization
+        image: containersoga/hrorganization
         imagePullPolicy: Always
         ports:
         - containerPort: 80
@@ -49,18 +49,3 @@ spec:
           initialDelaySeconds: 60
           periodSeconds: 100
           timeoutSeconds: 200
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: employee
-  labels:
-    app: employee
-spec:
-  selector:
-    app: employee
-  ports:
-  - port: 5002
-    targetPort: 80
-    protocol: TCP
-    name: http
