--- a/kubernetes/Resources/organization-deployment.yml
+++ b/kubernetes/Resources/organization-deployment.yml
@@ -6,10 +6,12 @@ spec:
   selector:
     matchLabels:
       app: organization
+      version: v1
   template:
     metadata:
       labels:
         app: organization
+        version: v1
     spec:
       containers:
       - name: organization
